; ModuleID = '/home/carl/AnghaBench/kphp-kdb/geoip/extr_geoip.c_skip_parse.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/geoip/extr_geoip.c_skip_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buff = common dso_local global i32* null, align 8
@parse_pos = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @skip_parse() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %31, %0
  %3 = load i32*, i32** @buff, align 8
  %4 = load i64, i64* @parse_pos, align 8
  %5 = getelementptr inbounds i32, i32* %3, i64 %4
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %20

8:                                                ; preds = %2
  %9 = load i32*, i32** @buff, align 8
  %10 = load i64, i64* @parse_pos, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 10
  br i1 %13, label %14, label %20

14:                                               ; preds = %8
  %15 = load i32*, i32** @buff, align 8
  %16 = load i64, i64* @parse_pos, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 13
  br label %20

20:                                               ; preds = %14, %8, %2
  %21 = phi i1 [ false, %8 ], [ false, %2 ], [ %19, %14 ]
  br i1 %21, label %22, label %34

22:                                               ; preds = %20
  %23 = load i32*, i32** @buff, align 8
  %24 = load i64, i64* @parse_pos, align 8
  %25 = getelementptr inbounds i32, i32* %23, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = icmp eq i32 %26, 44
  br i1 %27, label %28, label %31

28:                                               ; preds = %22
  %29 = load i32, i32* %1, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %1, align 4
  br label %31

31:                                               ; preds = %28, %22
  %32 = load i64, i64* @parse_pos, align 8
  %33 = add i64 %32, 1
  store i64 %33, i64* @parse_pos, align 8
  br label %2

34:                                               ; preds = %20
  %35 = load i32, i32* %1, align 4
  ret i32 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
